// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ansible Collection details page rendering renders with ansible collection provided 1`] = `
<div>
  <BreadcrumbsBar
    data={
      Object {
        "breadcrumbItems": Array [
          Object {
            "caption": "Ansible Collection Details",
            "onClick": [Function],
          },
          Object {
            "caption": "collection_demo-newswangerd-1.0.5",
          },
        ],
        "isSwitchable": true,
        "resource": Object {
          "nameField": "name",
          "resourceUrl": "/katello/api/v2/ansible_collections",
          "switcherItemUrl": "/ansible_collections/:id",
        },
      }
    }
    onSwitcherItemClick={[Function]}
  />
  <ContentDetails
    contentDetails={
      Object {
        "checksum": "60bf94a30d3b7015c7cdc2a99f0a440f68f71cb56c934ba3787e52a6061fa2d5",
        "id": 2,
        "name": "collection_demo",
        "namespace": "newswangerd",
        "repositories": Array [
          Object {
            "id": 2,
            "name": "ans_collection",
            "product_id": 2,
            "product_name": "pulp3_products",
          },
        ],
        "version": "1.0.5",
      }
    }
    schema={
      Array [
        Object {
          "key": 1,
          "tabContent": <ContentDetailInfo
            contentDetails={
              Object {
                "checksum": "60bf94a30d3b7015c7cdc2a99f0a440f68f71cb56c934ba3787e52a6061fa2d5",
                "id": 2,
                "name": "collection_demo",
                "namespace": "newswangerd",
                "repositories": Array [
                  Object {
                    "id": 2,
                    "name": "ans_collection",
                    "product_id": 2,
                    "product_name": "pulp3_products",
                  },
                ],
                "version": "1.0.5",
              }
            }
            displayMap={
              Array [
                Array [
                  "name",
                  "Name",
                ],
                Array [
                  "description",
                  "Description",
                ],
                Array [
                  "namespace",
                  "Author",
                ],
                Array [
                  "version",
                  "Version",
                ],
                Array [
                  "checksum",
                  "Checksum",
                ],
                Array [
                  "tags",
                  "Tags",
                ],
              ]
            }
          />,
          "tabHeader": "Details",
        },
        Object {
          "key": 2,
          "tabContent": <ContentDetailRepositories
            repositories={
              Array [
                Object {
                  "id": 2,
                  "name": "ans_collection",
                  "product_id": 2,
                  "product_name": "pulp3_products",
                },
              ]
            }
          />,
          "tabHeader": "Repositories",
        },
      ]
    }
  />
</div>
`;

exports[`Ansible Collection details page rendering renders with loading state 1`] = `
<div>
  <ContentDetails
    contentDetails={
      Object {
        "itemCount": 0,
        "loading": true,
        "pagination": Object {
          "page": 0,
          "perPage": 20,
        },
        "results": Array [],
      }
    }
    schema={
      Array [
        Object {
          "key": 1,
          "tabContent": <ContentDetailInfo
            contentDetails={
              Object {
                "itemCount": 0,
                "loading": true,
                "pagination": Object {
                  "page": 0,
                  "perPage": 20,
                },
                "results": Array [],
              }
            }
            displayMap={
              Array [
                Array [
                  "name",
                  "Name",
                ],
                Array [
                  "description",
                  "Description",
                ],
                Array [
                  "namespace",
                  "Author",
                ],
                Array [
                  "version",
                  "Version",
                ],
                Array [
                  "checksum",
                  "Checksum",
                ],
                Array [
                  "tags",
                  "Tags",
                ],
              ]
            }
          />,
          "tabHeader": "Details",
        },
        Object {
          "key": 2,
          "tabContent": "No repositories to show",
          "tabHeader": "Repositories",
        },
      ]
    }
  />
</div>
`;
